--- a/menuindex.html
+++ b/menuindex.html
@@ -14,7 +14,8 @@
                 <!--container_title-->
                 <div class="container_title_bloc">
                     <div class="icon__back">
-                        <i class="fas fa-arrow-left"></i>
+          <a href="index.html"><i class="fas fa-arrow-left"></i></a>  
+                       
                     </div>
                     <div class="food__title">
                         <img class="title" src="logo/ohmyfood.png" alt="title_logo" />
@@ -41,7 +42,7 @@
                  <div class="under_title"><h3>ENTRÉES</h3></div>
                     <div class="content_entrance1">
                         <h4>Tartare de poulpe acidulé</h4>
-                 <p>Aux zests d'orange</p>
+           <div class="content__dish"><p>Aux zests d'orange</p></div> 
                         <div class="price__entrance1"><span>25€</span></div>
                         <div class="anim-content_entrance1">
                             <i class="fas fa-check"></i>
@@ -75,9 +76,9 @@
                  <div class="under_title"><h3>PLATS</h3></div>
                     <div class="content_plate1">
                         <h4>Coquilles Saint-Jacques</h4>
-                        <p>Accompagnées d'une purée de panais</p>
+   <div class="content__dish"><p>Accompagnées d'une purée de panais</p></div>               
                         <div class="price__plate1">
-                            <p>40€</p>
+                            <span>40€</span>
                         </div>
                         <div class="anim-content_plate1">
                         <i class="fas fa-check"></i>
@@ -87,7 +88,7 @@
                     <h4>Magret de canard</h4>
                     <p>Et parmentier de pommes de terres</p>
                     <div class="price__plate2">
-                        <p>35€</p>
+                        <span>35€</span>
                     </div>
                     <div class="anim-content_plate2">
                         <i class="fas fa-check"></i>
@@ -98,7 +99,7 @@
                     <h4>Pigeonneau dIlle-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
                     <div class="price__plate3">
-                        <p>44€</p> </div>
+                        <span>44€</span> </div>
                         <div class="anim-content_plate3">
                             <i class="fas fa-check"></i>
                         </div>
@@ -118,7 +119,7 @@
                     <h4>Pétales de violettes glacés</h4>
                     <p>Et purée de noisettes</p>
                     <div class="price__dessert1">
-                        <p>18€</p></div>
+                        <span>18€</span></div>
                         <div class="anim-content_dessert1">
                             <i class="fas fa-check"></i>
                         </div>
@@ -129,7 +130,7 @@
                     <h4>Fondant au chocolat</h4>
                     <p>Revisité</p>
                     <div class="price__dessert2">
-                        <p>22€</p></div>
+                        <span>22€</span></div>
                         <div class="anim-content_dessert2">
                             <i class="fas fa-check"></i>
                         </div>
@@ -140,7 +141,7 @@
                     <h4>Millefeuille croustillant</h4>
                     <p>Myrtilles et pâte d'amande</p>
                     <div class="price__dessert3">
-                        <p>23€</p></div>
+                        <span>23€</span></div>
                         <div class="anim-content_dessert3">
                             <i class="fas fa-check"></i>
                         </div>
