--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
                 <div class="first_bloc">
                     <div class="select_eatary">
                         <div class="new_sticker"><p>Nouveau</p></div>
-
                         <figure>
                             <img class="pic_food" src="restaurants/menilmontant.jpg" alt="menilmontant" />
                             <figcaption>
@@ -83,7 +82,9 @@
                                     <h3>La palette du goût</h3>
                                     <i class="far fa-heart"></i>
                                 </div>
-                                <div class="city_fig"><p>Ménilmontant</p></div>
+                                <div class="city_fig">
+                                    <p>Ménilmontant</p>
+                                </div>
                             </figcaption>
                         </figure>
                     </div>
@@ -105,7 +106,9 @@
                 <div class="second_bloc">
                     <div class="select_eatary">
                         <figure>
-                            <img class="pic_food" src="restaurants/cité_rouge.jpg" alt="cite-rouge" />
+                            <a href="menuindex.html">
+                                <img class="pic_food" src="restaurants/cité_rouge.jpg" alt="cite-rouge" />
+                            </a>
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>la française</h3>
