--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                     <div class="select_eatary">
                         <div class="new_sticker"><p>Nouveau</p></div>
                         <figure>
-                            <img class="pic_food" src="restaurants/menilmontant.jpg" alt="menilmontant" />
+                            <a href="gust-index.html">
+                                <img class="pic_food" src="restaurants/menilmontant.jpg" alt="menilmontant" />
+                            </a>
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>La palette du goût</h3>
@@ -91,7 +93,9 @@
                     <div class="select_eatary">
                         <div class="new_sticker"><p>Nouveau</p></div>
                         <figure>
-                            <img class="pic_food" src="restaurants/charonne.jpg" alt="charonne" />
+                            <a href="enchanted-index.html">
+                                <img class="pic_food" src="restaurants/charonne.jpg" alt="charonne" />
+                            </a>
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>La note enchantée</h3>
