--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width initial-scale=1.0" />
+        <link rel="preload" href="spiner.html" as="style" />
         <link rel="stylesheet" href="stylesheetfood.css" type="text/css" />
+
         <script src="https://kit.fontawesome.com/f86274a797.js" crossorigin="anonymous"></script>
         <title>ohmyfood</title>
     </head>
@@ -11,6 +13,12 @@
         <div class="bloc_page">
             <!--container_header-->
             <header>
+                <!--spinner-loader-->
+                <div class="content__loader">
+                    <div class="load-spin"></div>
+                    <div class="loading"></div>
+                </div>
+
                 <!--container_title-->
                 <div class="container_title_bloc">
                     <div class="icon_title"><img src="logo/ohmyfood.png" alt="title_logo" /></div>
