anim heart text-overflow

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width initial-scale=1.0" />
-        <link rel="preload" href="spiner.html" as="style" />
         <link rel="stylesheet" href="stylesheetfood.css" type="text/css" />
-
         <script src="https://kit.fontawesome.com/f86274a797.js" crossorigin="anonymous"></script>
         <title>ohmyfood</title>
     </head>
@@ -15,6 +13,9 @@
             <header>
                 <!--spinner-loader-->
                 <div class="content__loader">
+                    <div class="title-spinner">
+                        <span>ohmyfood</span>
+                    </div>
                     <div class="load-spin"></div>
                     <div class="loading"></div>
                 </div>
@@ -90,7 +91,8 @@
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>La palette du goût</h3>
-                                    <i class="far fa-heart"></i>
+                                    <div class="heart-purple"><i class="fas fa-heart"></i></div>
+                                    <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
                                 <div class="city_fig">
                                     <p>Ménilmontant</p>
@@ -107,7 +109,8 @@
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>La note enchantée</h3>
-                                    <i class="far fa-heart"></i>
+                                    <div class="heart-purple"><i class="fas fa-heart"></i></div>
+                                    <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
                                 <div class="city_fig"><p>Charonne</p></div>
                             </figcaption>
@@ -124,7 +127,8 @@
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>la française</h3>
-                                    <i class="far fa-heart"></i>
+                                    <div class="heart-purple"><i class="fas fa-heart"></i></div>
+                                    <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
                                 <div class="city_fig"><p>Cité Rouge</p></div>
                             </figcaption>
@@ -137,7 +141,8 @@
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>Le délice des sens</h3>
-                                    <i class="far fa-heart"></i>
+                                    <div class="heart-purple"><i class="fas fa-heart"></i></div>
+                                    <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
                                 <div class="city_fig"><p>Folie-Méricourt</p></div>
                             </figcaption>
