--- a/crazy_index.html
+++ b/crazy_index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width initial-scale=1.0" />
-        <link rel="stylesheet" href="enchanted-stylesheet.css" type="text/css" />
+        <link rel="stylesheet" href="crazy_stylesheet.css" type="text/css" />
         <script src="https://kit.fontawesome.com/f86274a797.js" crossorigin="anonymous"></script>
-        <title>ohmyfoodenchanted</title>
+        <title>ohmyfoodmericourt</title>
     </head>
     <body>
         <div class="bloc_page">
@@ -23,7 +23,7 @@
                 </div>
                 <!--container_syle_img-->
                 <div class="header_style">
-                    <img class="pic_french" src="restaurants/charonne.jpg" alt="header_vision" />
+                    <img class="pic_french" src="restaurants/mericourt.jpg" alt="header_vision" />
                 </div>
             </header>
 
@@ -31,7 +31,7 @@
             <div class="container_menu">
                 <!--container_title-->
                 <div class="menu_title">
-                    <h1>La note enchantée</h1>
+                    <h1>Le délice des sens</h1>
                  <div class="heart-purple"><i class="fas fa-heart"></i></div>
                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                 </div>
@@ -42,16 +42,16 @@
                 <div class="bloc_entrance">
                  <div class="under_title"><h3>ENTRÉES</h3></div>
                     <div class="content_entrance1">
-                        <h4>Ravioles de foie gras </h4>
-           <div class="content__dish"><span>Accompagnés de leur crème à la truffe</span></div> 
+                        <h4>Tartare de thon</h4>
+           <div class="content__dish"><span>Assaisonné au yuzu</span></div> 
                         <div class="price__entrance1"><span>25€</span></div>
                         <div class="anim-content_entrance1">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance2">
-                        <h4>Caviar osciètre</h4>
-          <div class="content__dish"><span>Sur blini à la farine de blé noir</span></div>
+                        <h4>Bouchée de homard croustillant </h4>
+          <div class="content__dish"><span>Et sa farandole de petits légumes</span></div>
                         <div class="price__entrance2">
                             <span>35€</span>
                         </div>
@@ -60,8 +60,8 @@
                         </div>
                     </div>
                     <div class="content_entrance3">
-                        <h4>Homard et espuma de potiron</h4>
-      <div class="content__dish"><span>Mariné aux zestes d'orange</span></div>
+                        <h4>Velouté de cèpes </h4>
+      <div class="content__dish"><span>Aux truffes</span></div>
                         <div class="price__entrance3">
                             <span>20€</span>
                         </div>
@@ -76,8 +76,8 @@
                 <div class="bloc_plate">
                  <div class="under_title"><h3>PLATS</h3></div>
                     <div class="content_plate1">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
-   <div class="content__dish"><span>Sur lit de purée de céleri-rave</span></div>               
+                        <h4>Poulet rôti aux herbes de Provence</h4>
+   <div class="content__dish"><span>Et sa crème de truffe</span></div>               
                         <div class="price__plate1">
                             <span>40€</span>
                         </div>
@@ -86,8 +86,8 @@
                     </div>
                 </div>
                 <div class="content_plate2">
-                    <h4>Langoustine poêlée</h4>
-  <div class="content__dish"><span>Purée de patate douce</span></div>
+                    <h4>Langouste rôtie </h4>
+  <div class="content__dish"><span>Et ses légumes de saison</span></div>
                     <div class="price__plate2">
                         <span>35€</span>
                     </div>
@@ -97,8 +97,8 @@
                 </div>
 
                 <div class="content_plate3">
-                    <h4>Mijoté de queue de boeuf</h4>
- <div class="content__dish"><span>Et riz sauvage aux zestes de citron</span></div>
+                    <h4>Côte de boeuf Angus</h4>
+ <div class="content__dish"><span>Et sa purée de panais</span></div>
                     <div class="price__plate3">
                         <span>44€</span> </div>
                         <div class="anim-content_plate3">
@@ -106,15 +106,15 @@
                         </div>
                 </div>
             </div>
-            <!--third_bloc-restaurant-->
+            <!--third_bloc-restaurant_dessert-->
              <div class="bloc_dessert">
               <div class="under_title">
                 <h3>DESSERTS</h3>
             </div>         
                 <div class="content_dessert1">                              
                 
-                    <h4>Macaron noisette et chocolat</h4>
-   <div class="content__dish"><span>Glace au caramel brun et sel de Guérande</span></div>
+                    <h4>Farandole de desserts</h4>
+   <div class="content__dish"><span>Du chef</span></div>
                     <div class="price__dessert1">
                         <span>18€</span></div>
                         <div class="anim-content_dessert1">
@@ -124,8 +124,8 @@
                 </div>
 
                 <div class="content_dessert2">
-                    <h4>Baba au rhum revisité </h4>
-  <div class="content__dish"><span>Avec son coulis de citron</span></div>
+                    <h4>Crème brulée</h4>
+  <div class="content__dish"><span>Revisitée</span></div>
                     <div class="price__dessert2">
                         <span>22€</span></div>
                         <div class="anim-content_dessert2">
@@ -133,8 +133,8 @@
                         </div>
                      </div>
                 <div class="content_dessert3">
-                    <h4>Tarte au citron meringuée </h4>
-  <div class="content__dish"><span>Déstructurée</span></div>
+                    <h4>Tiramisu </h4>
+  <div class="content__dish"><span>À la noisette</span></div>
                     <div class="price__dessert3">
                         <span>23€</span></div>
                         <div class="anim-content_dessert3">
