--- a/menuindex.html
+++ b/menuindex.html
@@ -32,7 +32,8 @@
                 <!--container_title-->
                 <div class="menu_title">
                     <h1>À la française</h1>
-                    <i class="far fa-heart"></i>
+               <div class="heart-purple"><i class="fas fa-heart"></i></div>
+                    <div class="heart-lite"><i class="far fa-heart"></i></div>
                 </div>
 
                 <!--first_bloc-restaurant-->
@@ -42,7 +43,7 @@
                  <div class="under_title"><h3>ENTRÉES</h3></div>
                     <div class="content_entrance1">
                         <h4>Tartare de poulpe acidulé</h4>
-           <div class="content__dish"><p>Aux zests d'orange</p></div> 
+           <div class="content__dish"><span>Aux zests d'orange</span></div> 
                         <div class="price__entrance1"><span>25€</span></div>
                         <div class="anim-content_entrance1">
                             <i class="fas fa-check"></i>
@@ -50,7 +51,7 @@
                     </div>
                     <div class="content_entrance2">
                         <h4>Velouté de légume d'antan</h4>
-          <div class="content__dish"><p>Carotte, panais, topinambourg</p></div>
+          <div class="content__dish"><span>Carotte, panais, topinambourg</span></div>
                         <div class="price__entrance2">
                             <span>35€</span>
                         </div>
@@ -60,7 +61,7 @@
                     </div>
                     <div class="content_entrance3">
                         <h4>Soupe à l'oignon</h4>
-      <div class="content__dish"><p>Revisitée</p></div>
+      <div class="content__dish"><span>Revisitée</span></div>
                         <div class="price__entrance3">
                             <span>20€</span>
                         </div>
@@ -76,7 +77,7 @@
                  <div class="under_title"><h3>PLATS</h3></div>
                     <div class="content_plate1">
                         <h4>Coquilles Saint-Jacques</h4>
-   <div class="content__dish"><p>Accompagnées d'une purée de panais</p></div>               
+   <div class="content__dish"><span>Accompagnées d'une purée de panais</span></div>               
                         <div class="price__plate1">
                             <span>40€</span>
                         </div>
@@ -86,7 +87,7 @@
                 </div>
                 <div class="content_plate2">
                     <h4>Magret de canard</h4>
-  <div class="content__dish"><p>Et parmentier de pommes de terres</p></div>
+  <div class="content__dish"><span>Et parmentier de pommes de terres</span></div>
                     <div class="price__plate2">
                         <span>35€</span>
                     </div>
@@ -97,7 +98,7 @@
 
                 <div class="content_plate3">
                     <h4>Pigeonneau dIlle-et-Vilaine</h4>
- <div class="content__dish"><p>Sur son lit de gnocchis aux légumes</p></div>
+ <div class="content__dish"><span>Sur son lit de gnocchis aux légumes</span></div>
                     <div class="price__plate3">
                         <span>44€</span> </div>
                         <div class="anim-content_plate3">
@@ -110,21 +111,18 @@
               <div class="under_title">
                 <h3>DESSERTS</h3>
             </div>         
-                <div class="content_dessert1">                              
-                
-                    <h4>Pétales de violettes glacés</h4>
-   <div class="content__dish"><p>Et purée de noisettes</p></div>
+                <div class="content_dessert1">                           
+                  <h4>Pétales de violettes glacés</h4>
+   <div class="content__dish"><span>Et purée de noisettes</span></div>
                     <div class="price__dessert1">
                         <span>18€</span></div>
                         <div class="anim-content_dessert1">
                             <i class="fas fa-check"></i>
                         </div>
-                    
-                </div>
-
+                    </div>
                 <div class="content_dessert2">
                     <h4>Fondant au chocolat</h4>
-  <div class="content__dish"><p>Revisité</p></div>
+  <div class="content__dish"><span>Revisité</span></div>
                     <div class="price__dessert2">
                         <span>22€</span></div>
                         <div class="anim-content_dessert2">
@@ -135,7 +133,7 @@
 
                 <div class="content_dessert3">
                     <h4>Millefeuille croustillant</h4>
-  <div class="content__dish"><p>Myrtilles et pâte d'amande</p></div>
+  <div class="content__dish"><span>Myrtilles et pâte d'amande</span></div>
                     <div class="price__dessert3">
                         <span>23€</span></div>
                         <div class="anim-content_dessert3">
