work in progress

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
 
                     <div class="select_eatary">
                         <figure>
-                            <img class="pic_food" src="restaurants/mericourt.jpg" alt="folie-mericourt" />
+                            <a href="crazy_index.html">
+                                <img class="pic_food" src="restaurants/mericourt.jpg" alt="folie-mericourt" />
+                            </a>
                             <figcaption>
                                 <div class="comment_rest">
                                     <h3>Le délice des sens</h3>
