work in progress

--- a/enchanted-index.html
+++ b/enchanted-index.html
@@ -44,28 +44,28 @@
                     <div class="content_entrance1">
                         <h4>Ravioles de foie gras </h4>
            <div class="content__dish"><span>Accompagnés de leur crème à la truffe</span></div> 
-                        <div class="price__entrance1"><span>25€</span></div>
-                        <div class="anim-content_entrance1">
+                        <div class="price__entrance"><span>25€</span></div>
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance2">
                         <h4>Caviar osciètre</h4>
           <div class="content__dish"><span>Sur blini à la farine de blé noir</span></div>
-                        <div class="price__entrance2">
+                        <div class="price__entrance">
                             <span>35€</span>
                         </div>
-                        <div class="anim-content_entrance2">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance3">
                         <h4>Homard et espuma de potiron</h4>
       <div class="content__dish"><span>Mariné aux zestes d'orange</span></div>
-                        <div class="price__entrance3">
+                        <div class="price__entrance">
                             <span>20€</span>
                         </div>
-                        <div class="anim-content_entrance3">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -78,20 +78,20 @@
                     <div class="content_plate1">
                         <h4>Noix de coquilles Saint-Jacques</h4>
    <div class="content__dish"><span>Sur lit de purée de céleri-rave</span></div>               
-                        <div class="price__plate1">
+                        <div class="price__plate">
                             <span>40€</span>
                         </div>
-                        <div class="anim-content_plate1">
+                        <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
                 <div class="content_plate2">
                     <h4>Langoustine poêlée</h4>
   <div class="content__dish"><span>Purée de patate douce</span></div>
-                    <div class="price__plate2">
+                    <div class="price__plate">
                         <span>35€</span>
                     </div>
-                    <div class="anim-content_plate2">
+                    <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                 <div class="content_plate3">
                     <h4>Mijoté de queue de boeuf</h4>
  <div class="content__dish"><span>Et riz sauvage aux zestes de citron</span></div>
-                    <div class="price__plate3">
+                    <div class="price__plate">
                         <span>44€</span> </div>
-                        <div class="anim-content_plate3">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                 </div>
@@ -115,9 +115,9 @@
                 
                     <h4>Macaron noisette et chocolat</h4>
    <div class="content__dish"><span>Glace au caramel brun et sel de Guérande</span></div>
-                    <div class="price__dessert1">
+                    <div class="price__dessert">
                         <span>18€</span></div>
-                        <div class="anim-content_dessert1">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     
@@ -126,18 +126,18 @@
                 <div class="content_dessert2">
                     <h4>Baba au rhum revisité </h4>
   <div class="content__dish"><span>Avec son coulis de citron</span></div>
-                    <div class="price__dessert2">
+                    <div class="price__dessert">
                         <span>22€</span></div>
-                        <div class="anim-content_dessert2">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                      </div>
                 <div class="content_dessert3">
                     <h4>Tarte au citron meringuée </h4>
   <div class="content__dish"><span>Déstructurée</span></div>
-                    <div class="price__dessert3">
+                    <div class="price__dessert">
                         <span>23€</span></div>
-                        <div class="anim-content_dessert3">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                      </div>
