--- a/gust-index.html
+++ b/gust-index.html
@@ -43,29 +43,29 @@
                     <div class="content_entrance1">
                         <h4>Fricassée d'escargot</h4>
                         <div class="content__dish"><span>Aux piment d'espelette</span></div>
-                        <div class="price__entrance1"><span>25€</span></div>
-                        <div class="anim-content_entrance1">
+                        <div class="price__entrance"><span>25€</span></div>
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance2">
                         <h4>Foie fras de canard mi-cuit</h4>
                         <div class="content__dish"><span>Et ses copeaux de truffe noire</span></div>
-                        <div class="price__entrance2">
+                        <div class="price__entrance">
                             <span>35€</span>
                         </div>
-                        <div class="anim-content_entrance2">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance3">
                         <h4>Oeuf au plat</h4>
                         <div class="content__dish"><span>Assaisonné à la truff sur lit de caviar</span></div>
-                        <div class="price__entrance3">
+                        <div class="price__entrance">
                             <span>20€</span>
                         </div>
 
-                        <div class="anim-content_entrance3">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -77,11 +77,11 @@
                     <div class="content_plate1">
                         <div class="content--dinner"><h4>Filet de boeuf aux herbes</h4></div>
                         <div class="content__dish"><span>Accompagnées de sa ribambelle de légumes</span></div>
-                        <div class="price__plate1">
+                        <div class="price__plate">
                             <span>40€</span>
                         </div>
 
-                        <div class="anim-content_plate1">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -89,10 +89,10 @@
                     <div class="content_plate2">
                         <h4>Parmentier de queue de boeuf</h4>
                         <div class="content__dish"><span>À la truffe noire sur sa purée de panais</span></div>
-                        <div class="price__plate2">
+                        <div class="price__plate">
                             <span>35€</span>
                         </div>
-                        <div class="anim-content_plate2">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -100,10 +100,10 @@
                     <div class="content_plate3">
                         <h4>Filet de turbot</h4>
                         <div class="content__dish"><span>Aux agrumes</span></div>
-                        <div class="price__plate3">
+                        <div class="price__plate">
                             <span>44€</span>
                         </div>
-                        <div class="anim-content_plate3">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -116,20 +116,20 @@
                     <div class="content_dessert1">
                         <h4>Paris-Brest</h4>
                         <div class="content__dish"><span>Revisité</span></div>
-                        <div class="price__dessert1">
+                        <div class="price__dessert">
                             <span>18€</span>
                         </div>
-                        <div class="anim-content_dessert1">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_dessert2">
                         <h4>Macaron au chocolat d'exception</h4>
                         <div class="content__dish"><span>Et glace à la vanille de Madagascar</span></div>
-                        <div class="price__dessert2">
+                        <div class="price__dessert">
                             <span>22€</span>
                         </div>
-                        <div class="anim-content_dessert2">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -137,10 +137,10 @@
                     <div class="content_dessert3">
                         <h4>Mousse au chocolat</h4>
                         <div class="content__dish"><span>Au piment d'Espelette et à la truffe noire</span></div>
-                        <div class="price__dessert3">
+                        <div class="price__dessert">
                             <span>23€</span>
                         </div>
-                        <div class="anim-content_dessert3">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
