--- a/menuindex.html
+++ b/menuindex.html
@@ -44,28 +44,28 @@
                     <div class="content_entrance1">
                         <h4>Tartare de poulpe acidulé</h4>
            <div class="content__dish"><span>Aux zests d'orange</span></div> 
-                        <div class="price__entrance1"><span>25€</span></div>
-                        <div class="anim-content_entrance1">
+                        <div class="price__entrance"><span>25€</span></div>
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance2">
                         <h4>Velouté de légume d'antan</h4>
           <div class="content__dish"><span>Carotte, panais, topinambourg</span></div>
-                        <div class="price__entrance2">
+                        <div class="price__entrance">
                             <span>35€</span>
                         </div>
-                        <div class="anim-content_entrance2">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance3">
                         <h4>Soupe à l'oignon</h4>
       <div class="content__dish"><span>Revisitée</span></div>
-                        <div class="price__entrance3">
+                        <div class="price__entrance">
                             <span>20€</span>
                         </div>
-                        <div class="anim-content_entrance3">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -78,20 +78,20 @@
                     <div class="content_plate1">
                         <h4>Coquilles Saint-Jacques</h4>
    <div class="content__dish"><span>Accompagnées d'une purée de panais</span></div>               
-                        <div class="price__plate1">
+                        <div class="price__plate">
                             <span>40€</span>
                         </div>
-                        <div class="anim-content_plate1">
+                        <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
                 <div class="content_plate2">
                     <h4>Magret de canard</h4>
   <div class="content__dish"><span>Et parmentier de pommes de terres</span></div>
-                    <div class="price__plate2">
+                    <div class="price__plate">
                         <span>35€</span>
                     </div>
-                    <div class="anim-content_plate2">
+                    <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                 <div class="content_plate3">
                     <h4>Pigeonneau dIlle-et-Vilaine</h4>
  <div class="content__dish"><span>Sur son lit de gnocchis aux légumes</span></div>
-                    <div class="price__plate3">
+                    <div class="price__plate">
                         <span>44€</span> </div>
-                        <div class="anim-content_plate3">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                 </div>
@@ -114,18 +114,18 @@
                 <div class="content_dessert1">                           
                   <h4>Pétales de violettes glacés</h4>
    <div class="content__dish"><span>Et purée de noisettes</span></div>
-                    <div class="price__dessert1">
+                    <div class="price__dessert">
                         <span>18€</span></div>
-                        <div class="anim-content_dessert1">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                 <div class="content_dessert2">
                     <h4>Fondant au chocolat</h4>
   <div class="content__dish"><span>Revisité</span></div>
-                    <div class="price__dessert2">
+                    <div class="price__dessert">
                         <span>22€</span></div>
-                        <div class="anim-content_dessert2">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     
@@ -134,9 +134,9 @@
                 <div class="content_dessert3">
                     <h4>Millefeuille croustillant</h4>
   <div class="content__dish"><span>Myrtilles et pâte d'amande</span></div>
-                    <div class="price__dessert3">
+                    <div class="price__dessert">
                         <span>23€</span></div>
-                        <div class="anim-content_dessert3">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     
