--- a/crazy_index.html
+++ b/crazy_index.html
@@ -44,28 +44,28 @@
                     <div class="content_entrance1">
                         <h4>Tartare de thon</h4>
            <div class="content__dish"><span>Assaisonné au yuzu</span></div> 
-                        <div class="price__entrance1"><span>25€</span></div>
-                        <div class="anim-content_entrance1">
+                        <div class="price__entrance"><span>25€</span></div>
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance2">
                         <h4>Bouchée de homard croustillant </h4>
           <div class="content__dish"><span>Et sa farandole de petits légumes</span></div>
-                        <div class="price__entrance2">
+                        <div class="price__entrance">
                             <span>35€</span>
                         </div>
-                        <div class="anim-content_entrance2">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
                     <div class="content_entrance3">
                         <h4>Velouté de cèpes </h4>
       <div class="content__dish"><span>Aux truffes</span></div>
-                        <div class="price__entrance3">
+                        <div class="price__entrance">
                             <span>20€</span>
                         </div>
-                        <div class="anim-content_entrance3">
+                        <div class="anim-content_entrance">
                             <i class="fas fa-check"></i>
                         </div>
                     </div>
@@ -78,20 +78,20 @@
                     <div class="content_plate1">
                         <h4>Poulet rôti aux herbes de Provence</h4>
    <div class="content__dish"><span>Et sa crème de truffe</span></div>               
-                        <div class="price__plate1">
+                        <div class="price__plate">
                             <span>40€</span>
                         </div>
-                        <div class="anim-content_plate1">
+                        <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
                 <div class="content_plate2">
                     <h4>Langouste rôtie </h4>
   <div class="content__dish"><span>Et ses légumes de saison</span></div>
-                    <div class="price__plate2">
+                    <div class="price__plate">
                         <span>35€</span>
                     </div>
-                    <div class="anim-content_plate2">
+                    <div class="anim-content_plate">
                         <i class="fas fa-check"></i>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                 <div class="content_plate3">
                     <h4>Côte de boeuf Angus</h4>
  <div class="content__dish"><span>Et sa purée de panais</span></div>
-                    <div class="price__plate3">
+                    <div class="price__plate">
                         <span>44€</span> </div>
-                        <div class="anim-content_plate3">
+                        <div class="anim-content_plate">
                             <i class="fas fa-check"></i>
                         </div>
                 </div>
@@ -115,9 +115,9 @@
                 
                     <h4>Farandole de desserts</h4>
    <div class="content__dish"><span>Du chef</span></div>
-                    <div class="price__dessert1">
+                    <div class="price__dessert">
                         <span>18€</span></div>
-                        <div class="anim-content_dessert1">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                     
@@ -126,18 +126,18 @@
                 <div class="content_dessert2">
                     <h4>Crème brulée</h4>
   <div class="content__dish"><span>Revisitée</span></div>
-                    <div class="price__dessert2">
+                    <div class="price__dessert">
                         <span>22€</span></div>
-                        <div class="anim-content_dessert2">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                      </div>
                 <div class="content_dessert3">
                     <h4>Tiramisu </h4>
   <div class="content__dish"><span>À la noisette</span></div>
-                    <div class="price__dessert3">
+                    <div class="price__dessert">
                         <span>23€</span></div>
-                        <div class="anim-content_dessert3">
+                        <div class="anim-content_dessert">
                             <i class="fas fa-check"></i>
                         </div>
                      </div>
