--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <h3>La palette du goût</h3>
+                                    <div class="comment_title"><h3>La palette du goût</h3></div>
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
@@ -108,7 +108,7 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <h3>La note enchantée</h3>
+                                    <div class="comment_title"><h3>La note enchantée</h3></div>
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
@@ -126,7 +126,7 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <h3>la française</h3>
+                                    <div class="comment_title"><h3>la française</h3></div>
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
@@ -142,7 +142,7 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <h3>Le délice des sens</h3>
+                                    <div class="comment_title"><h3>Le délice des sens</h3></div>
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
@@ -157,7 +157,6 @@
                 <div class="fooding_footer">
                     <ul>
                         <li><h1>ohmyfood</h1></li>
-
                         <li>
                             <i class="fas fa-utensils"></i>
                             <div class="proposition">
