--- a/enchanted-index.html
+++ b/enchanted-index.html
@@ -22,7 +22,7 @@
                 </div>
                 <!--container_syle_img-->
                 <div class="header_style">
-                    <img class="pic_french" src="restaurants/charonne.jpg" alt="header_vision" />
+                    <img class="pic_french" src="restaurants/charonne.jpg" alt="charonne" />
                 </div>
             </header>
 
