--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="select_eatary">
                         <figure>
                             <a href="menuindex.html">
-                                <img class="pic_food" src="restaurants/cité_rouge.jpg" alt="cite-rouge" />
+                                <img class="pic_food" src="restaurants/frenchmenu.jpg" alt="frenchmenu" />
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
