--- a/menuindex.html
+++ b/menuindex.html
@@ -22,7 +22,7 @@
                 </div>
                 <!--container_syle_img-->
                 <div class="header_style">
-                    <img class="pic_french" src="restaurants/cité_rouge.jpg" alt="cité_rouge" />
+                    <img class="pic_french" src="restaurants/frenchmenu.jpg" alt="frenchmenu" />
                 </div>
             </header>
             <!--container_menu_french-->
