linkcard and heart

--- a/index.html
+++ b/index.html
@@ -90,13 +90,19 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <div class="comment_title"><h3>La palette du goût</h3></div>
+                                    <a href="gust-index.html"
+                                        ><div class="comment_title">
+                                            <h3>La palette du goût</h3>
+                                        </div></a
+                                    >
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
-                                <div class="city_fig">
-                                    <p>Ménilmontant</p>
-                                </div>
+                                <a href="gust-index.html"
+                                    ><div class="city_fig">
+                                        <p>Ménilmontant</p>
+                                    </div></a
+                                >
                             </figcaption>
                         </figure>
                     </div>
@@ -108,11 +114,15 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <div class="comment_title"><h3>La note enchantée</h3></div>
+                                    <a href="enchanted-index.html"
+                                        ><div class="comment_title"><h3>La note enchantée</h3></div></a
+                                    >
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
-                                <div class="city_fig"><p>Charonne</p></div>
+                                <a href="enchanted-index.html"
+                                    ><div class="city_fig"><p>Charonne</p></div></a
+                                >
                             </figcaption>
                         </figure>
                     </div>
@@ -126,11 +136,15 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <div class="comment_title"><h3>la française</h3></div>
+                                    <a href="menuindex.html"
+                                        ><div class="comment_title"><h3>la française</h3></div></a
+                                    >
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
-                                <div class="city_fig"><p>Cité Rouge</p></div>
+                                <a href="menuindex.html"
+                                    ><div class="city_fig"><p>Cité Rouge</p></div></a
+                                >
                             </figcaption>
                         </figure>
                     </div>
@@ -142,11 +156,15 @@
                             </a>
                             <figcaption>
                                 <div class="comment_rest">
-                                    <div class="comment_title"><h3>Le délice des sens</h3></div>
+                                    <a href="crazy_index.html"
+                                        ><div class="comment_title"><h3>Le délice des sens</h3></div></a
+                                    >
                                     <div class="heart-purple"><i class="fas fa-heart"></i></div>
                                     <div class="heart-lite"><i class="far fa-heart"></i></div>
                                 </div>
-                                <div class="city_fig"><p>Folie-Méricourt</p></div>
+                                <a href="crazy_index.html">
+                                    <div class="city_fig"><p>Folie-Méricourt</p></div></a
+                                >
                             </figcaption>
                         </figure>
                     </div>
