spinner and heart

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <!--container_header-->
             <header>
                 <!--spinner-loader-->
+
                 <div class="content__loader">
-                    <div class="title-spinner">
-                        <span>ohmyfood</span>
-                    </div>
+                    <div class="title-spinner"><span>ohmyfood</span></div>
+
                     <div class="load-spin"></div>
                     <div class="loading"></div>
                 </div>
