--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
                             </div>
                         </li>
                         <li><p>Mention légale</p></li>
-                        <li><p>Contact</p></li>
+                        <li>
+                            <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                        </li>
                     </ul>
                 </div>
             </footer>
