--- a/menuindex.html
+++ b/menuindex.html
@@ -158,7 +158,8 @@
                             </li>
                             <li><p>Mention légale</p></li>
                             <li>
-                                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                                <a class="food__contact" href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                            </li>
                             </li>
                         </ul>
                     </div>
