--- a/enchanted-index.html
+++ b/enchanted-index.html
@@ -179,7 +179,7 @@
                             </li>
                             <li><p>Mention légale</p></li>
                             <li>
-                                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                                <a class="food__contact" href="mailto:contact@ohmyfood.com">Contact</a>
                             </li>
                         </ul>
                     </div>
