--- a/gust-index.html
+++ b/gust-index.html
@@ -170,7 +170,7 @@
                             </li>
                             <li><p>Mention légale</p></li>
                             <li>
-                                <a href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
+                                <a class="food__contact" href="mailto:contact@ohmyfood.com"><p>Contact</p></a>
                             </li>
                         </ul>
                     </div>
