--- a/crazy_index.html
+++ b/crazy_index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width initial-scale=1.0" />
-        <link rel="stylesheet" href="style/crazy_stylesheet.css" type="text/css" />
+        <link rel="stylesheet" href="crazy_stylesheet.css" type="text/css" />
         <script src="https://kit.fontawesome.com/f86274a797.js" crossorigin="anonymous"></script>
         <title>ohmyfoodmericourt</title>
     </head>
